--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "woff";
+  src: url("./messapia-bold.woff2");
+}
+* {
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
+  box-sizing: border-box;
+  font-family: "woff";
+  font-size: 0.99rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+html,
+body,
+#root,
+.app {
   color: white;
+  background-color: black;
+  height: 100%;
+}
+.main-layout {
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 22% auto 22%;
 }
 
-.App-link {
-  color: #61dafb;
+.column {
+  background-color: black;
+  padding: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-layout .column:nth-child(2) {
+  border-left: 000000.1px solid #d6b8f7;
+  border-right: 000000.1px solid #d6b8f7;
 }
