--- a/src/Styles/Signup.module.css
+++ b/src/Styles/Signup.module.css
@@ -1,11 +1,11 @@
-.login_container {
+.signup_container {
   background-color: black;
   height: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-.login_form {
+.signup_form {
   color: #a764f3;
   width: 300px;
   height: 500px;
@@ -15,14 +15,17 @@
   justify-content: flex-start;
   align-items: center;
 }
-.login_container h1 {
+.signup_form h1 {
   color: #a764f3;
   font-size: 1.8rem;
 }
-.quote_container {
-  width: 600px;
+.signup_form input {
+  width: 200px;
+  padding: 5px 10px;
+  margin: 5px 0;
 }
-.login_buttons button {
+
+.signup_form button {
   display: block;
   width: 200px;
   color: #f1eae5ff;
@@ -31,26 +34,13 @@
   border-radius: none;
   margin-top: 10px;
 }
-
-h1 {
-  color: white;
+label {
+  display: block;
+  margin-top: 10px;
 }
-.login_form input {
-  width: 200px;
-  padding: 5px 10px;
-  margin: 5px 0;
-}
-
-figure {
-  font-size: 1.6rem;
-  color: #a764f3;
-}
-.login_container div {
-  margin-top: 20px;
-}
-.login_buttons button a {
+button a {
   color: black;
 }
-img {
-  width: 500px;
+.signup_buttons {
+  margin-top: 20px;
 }
